--- a/lab4.html
+++ b/lab4.html
@@ -38,7 +38,7 @@
 <script>
     var name;
     var item;
-    var numItems;
+    var quantity;
     now = new Date();
     time = now.getHours();
     window.alert("Welcome to Matt's Store!")
