--- a/FinalProject/DamageAilments.html
+++ b/FinalProject/DamageAilments.html
@@ -104,7 +104,7 @@ https://5e-bits.github.io/docs/api/get-a-damage-type-by-index
                 const info = await GETData(`damage-types/${input}`) || await GETData(`conditions/${input}`);
                 if (info.desc)
                 {
-                    searchResult.innerHTML = `<strong>Description:</strong> ${info.desc.join(' ')}`;
+                    searchResult.innerHTML = `Description: ${info.desc.join(' ')}`;
                 }
                 else
                 {
