--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -41,6 +41,18 @@ https://5e-bits.github.io/docs/api/get-a-damage-type-by-index
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
+
+    <!--
+    <style>
+        body 
+        {
+            background-image: url('https://media.wizards.com/2015/images/dnd/resources/20151117_Sword-Coast-Map.jpg');
+            background-size: cover;
+            background-position: center;
+        }
+    </style>
+-->    
+
 </head>
 <body>
     <nav class="navbar navbar-default">
