Final Project DnD5E API

--- a/FinalProject/DamageAilments.html
+++ b/FinalProject/DamageAilments.html
@@ -41,16 +41,16 @@ https://5e-bits.github.io/docs/api/get-a-damage-type-by-index
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-<!--
+
     <style>
         body 
         {
-            background-image: url('https://assetsio.gnwcdn.com/dnd-map-maker-inkarnate.png?width=1200&height=1200&fit=bounds&quality=70&format=jpg&auto=webp');
+            background-image: url('https://fiverr-res.cloudinary.com/images/t_main1,q_auto,f_auto,q_auto,f_auto/gigs/188187740/original/8562a994edaff18c726a9db16e03320b0ed05215/create-a-fantasy-map-for-your-homebrew.jpg');
             background-size: cover;
-            background-position: center;
+            background-repeat: no-repeat;
         }
     </style>
--->    
+
 </head>
 <body>
     <nav class="navbar navbar-default">
@@ -131,6 +131,7 @@ https://5e-bits.github.io/docs/api/get-a-damage-type-by-index
     </script>
 </head>
 <body>
+    <br><br>
     <h2>DnD Conditions and Damage Types</h2>
     <input type="text" id="searchInput" placeholder="What damage type or ailment would you like to learn?" style="width: 50%;">
     <button onclick="searchInfo()">Confirm</button>
