DnD5e Final Project

--- a/FinalProject/DamageAilments.html
+++ b/FinalProject/DamageAilments.html
@@ -41,16 +41,59 @@ https://5e-bits.github.io/docs/api/get-a-damage-type-by-index
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
     <style>
-        body 
+        body
         {
-            background-image: url('https://fiverr-res.cloudinary.com/images/t_main1,q_auto,f_auto,q_auto,f_auto/gigs/188187740/original/8562a994edaff18c726a9db16e03320b0ed05215/create-a-fantasy-map-for-your-homebrew.jpg');
-            background-size: cover;
-            background-repeat: no-repeat;
+            background-color: #FFFEBD;
+            color: #000000;
+            font-size: 18px;
+        }
+
+        nav.navbar
+        {
+            background-color: #F7CE65;
+            border-color: #930C10;
+        }
+
+        .navbar .navbar-nav > li > a
+        {
+            color: #290000;
+        }
+
+        h2, h3
+        {
+            color: #000000;
+        }
+
+        #searchInput
+        {
+            background-color: #FFFFFF;
+            border: 1px solid #290000;
+            color: #000000;
+        }
+
+        #searchResult
+        {
+            color: #930C10;
+            background-color: #FFFEBD;
+            padding: 15px;
+            border: 1px solid #290000;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+
+        table
+        {
+            width: 100%;
+            background-color: #FFFEBD;
+        }
+
+        ul
+        {
+            background-color: transparent;
+            color: #000000;
+            list-style-type: none;
         }
     </style>
-
 </head>
 <body>
     <nav class="navbar navbar-default">
