DnD5e API Final Project

--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -102,7 +102,7 @@ ul
             <div class="navbar-header">
             </div>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="https://matthewtangcsi.github.io/index.html">My GitHub!</a></li>
+                <li class="active"><a href="https://github.com/MatthewTangCSI/matthewtangcsi.github.io">My GitHub!</a></li>
                 <li><a href="DamageAilments.html">Damage Types and Ailments</a></li>
             </ul>
         </div>
